examples/napi/tests/build_error_tests/external_ref_thread_safety.stderr
error[E0277]: `*mut napi_ref__` cannot be shared between threads safely
 --> tests/build_error_tests/external_ref_thread_safety.rs:6:17
  |
6 |   assert_sync::<ExternalRef<u32>>();
  |                 ^^^^^^^^^^^^^^^^ `*mut napi_ref__` cannot be shared between threads safely
  |
  = help: within `ExternalRef<u32>`, the trait `Sync` is not implemented for `*mut napi_ref__`
note: required because it appears within the type `ExternalRef<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/external.rs
  |
  | pub struct ExternalRef<T: 'static> {
  |            ^^^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/external_ref_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `*mut napi_env__` cannot be shared between threads safely
 --> tests/build_error_tests/external_ref_thread_safety.rs:6:17
  |
6 |   assert_sync::<ExternalRef<u32>>();
  |                 ^^^^^^^^^^^^^^^^ `*mut napi_env__` cannot be shared between threads safely
  |
  = help: within `ExternalRef<u32>`, the trait `Sync` is not implemented for `*mut napi_env__`
note: required because it appears within the type `ExternalRef<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/external.rs
  |
  | pub struct ExternalRef<T: 'static> {
  |            ^^^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/external_ref_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`

error[E0277]: `UnsafeCell<napi::bindgen_prelude::External<u32>>` cannot be shared between threads safely
 --> tests/build_error_tests/external_ref_thread_safety.rs:6:17
  |
6 |   assert_sync::<ExternalRef<u32>>();
  |                 ^^^^^^^^^^^^^^^^ `UnsafeCell<napi::bindgen_prelude::External<u32>>` cannot be shared between threads safely
  |
  = help: within `napi::bindgen_runtime::js_values::external::ExternalControlBlock<u32>`, the trait `Sync` is not implemented for `UnsafeCell<napi::bindgen_prelude::External<u32>>`
note: required because it appears within the type `napi::bindgen_runtime::js_values::external::ExternalControlBlock<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/external.rs
  |
  | struct ExternalControlBlock<T: 'static> {
  |        ^^^^^^^^^^^^^^^^^^^^
  = note: required for `Arc<napi::bindgen_runtime::js_values::external::ExternalControlBlock<u32>>` to implement `Sync`
note: required because it appears within the type `ExternalRef<u32>`
 --> $WORKSPACE/crates/napi/src/bindgen_runtime/js_values/external.rs
  |
  | pub struct ExternalRef<T: 'static> {
  |            ^^^^^^^^^^^
note: required by a bound in `assert_sync`
 --> tests/build_error_tests/external_ref_thread_safety.rs:3:19
  |
3 | fn assert_sync<T: Sync>() {}
  |                   ^^^^ required by this bound in `assert_sync`
