examples/napi/tests/build_error_tests/external_ref_thread_safety.rs
use napi::bindgen_prelude::ExternalRef;

fn assert_sync<T: Sync>() {}

fn main() {
  assert_sync::<ExternalRef<u32>>();
}
